@@ -492,7 +492,14 @@
         "@RUBY@",
         "tests/msg_size/msg_size.rb", [],
         immediate_closest, tcp, 16384,
-        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300, []}
+        5000, 5000, 5000, [api], undefined, 1, 1, 5, 300, []},
+    {external,
+        "/tests/messaging/",
+        "@PYTHON@",
+        "tests/messaging/messaging.py",
+        [],
+        immediate_closest, tcp, 16384,
+        5000, 10000, 10000, [api], undefined, 1, 4, 5, 300, []}
     %,
     % Flood tests configuration to generate 2K requests/second internally
     %{external,
